[gd_scene load_steps=20 format=3 uid="uid://chppt2ubov3ef"]

[ext_resource type="Script" path="res://technical/events/flood.gd" id="1_smg77"]
[ext_resource type="Texture2D" uid="uid://cc8d36kidwr3g" path="res://assets/images/events/water.png" id="2_iv0pk"]
[ext_resource type="Texture2D" uid="uid://bwov2ibax0r6m" path="res://assets/images/events/cork.png" id="3_xhyjr"]
[ext_resource type="AudioStream" uid="uid://cw08acrv3nycy" path="res://assets/sounds/water.ogg" id="4_k7ewg"]
[ext_resource type="AudioStream" uid="uid://d1dlckvhixnn2" path="res://assets/sounds/corkPop.ogg" id="5_telml"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sch8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_peecp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xceww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i8svl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nypof"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p1eu0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c36n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xra6o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hwush"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_anefo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nd7sv"]

[sub_resource type="Animation" id="Animation_86ipn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/cork:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(97, 610)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/cork:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/cork:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8hfox"]
resource_name = "cork"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/cork:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 1.2, 2),
"transitions": PackedFloat32Array(-4.43828, 1, 3.4822, 1),
"update": 0,
"values": [Vector2(97, 610), Vector2(97, 560.288), Vector2(97, 550.288), Vector2(97, 690)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/cork:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/cork:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.233333, 1, 2),
"transitions": PackedFloat32Array(0.574349, 4.92458, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jnmc"]
_data = {
"RESET": SubResource("Animation_86ipn"),
"cork": SubResource("Animation_8hfox")
}

[node name="flood" type="Node2D"]
script = ExtResource("1_smg77")

[node name="Control" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="water" type="Sprite2D" parent="Control"]
position = Vector2(576, 972)
texture = ExtResource("2_iv0pk")

[node name="cork" type="Sprite2D" parent="Control"]
position = Vector2(97, 610)
texture = ExtResource("3_xhyjr")

[node name="Button" type="Button" parent="Control/cork"]
offset_left = -55.0
offset_top = -59.0
offset_right = 55.0
offset_bottom = 60.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_sch8t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_peecp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xceww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_i8svl")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nypof")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_p1eu0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3c36n")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_xra6o")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hwush")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_anefo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nd7sv")

[node name="shakeTimer" type="Timer" parent="Control"]
wait_time = 0.2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_k7ewg")
volume_db = -4.685
autoplay = true

[node name="cork2" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("5_telml")
volume_db = -11.244

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7jnmc")
}

[connection signal="pressed" from="Control/cork/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Control/shakeTimer" to="." method="_on_shake_timer_timeout"]
